Fix display overflow

--- a/style.css
+++ b/style.css
@@ -22,26 +22,27 @@ body {
 .calculator.container {
     flex-direction: column;
     background-color: #0a202f;
-    width: 550px;
+    min-width: 730px;
     height: 700px;
     border-radius: 10px;
     padding: 20px;
-    min-width: 369px;
 }
 
 #display {
-    flex: 1;
+    grid-column: 1 / 4;
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
     background-color: rgb(173, 166, 166);
-    text-align: end;
-    font-size: 150px;
+    font-size: 40px;
     border-style: solid;
     border-width: 5px;
     text-shadow: 2px 2px #343232;
-    margin-bottom: 10px;
+    padding: 0px 3px;
 }
 
 .buttons.container {
-    flex: 4;
+    flex: 1;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
@@ -82,13 +83,17 @@ button.toggled {
     font-family: 'Lobster', cursive;
     color: #ACF0F2;
     font-size: 40px;
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
     align-items: center;
     justify-content: center;
 }
 
 #equals {
     grid-column-end: 5;
+}
+
+#backspace {
+    background-color:rgb(122, 115, 115)
 }
 
 
